Update Loom up to 1.2

--- a/gradle.properties
+++ b/gradle.properties
@@ -18,9 +18,9 @@ mod_name=sec-network
 mod_author=sibmaks
 
 #Fabric api
-fabric_version=0.80.0+1.19.4
+fabric_version=0.83.0+1.19.4
 lombok_version=1.18.26
 
 # sib-energy-craft libs
-sec_energy_api_version=0.0.4
-sec_utils_version=0.0.16
+sec_energy_api_version=0.0.6-1.19.4
+sec_utils_version=0.0.20-1.19.4
