--- a/gradle.properties
+++ b/gradle.properties
@@ -3,12 +3,12 @@ org.gradle.jvmargs=-Xmx2G
 
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.20-rc1
-yarn_mappings=1.20-rc1+build.2
+minecraft_version=1.20
+yarn_mappings=1.20+build.1
 loader_version=0.14.21
 
 # Mod Properties
-mod_version=0.0.4-1.20
+mod_version=0.0.5-1.20
 maven_group=com.github.sib-energy-craft
 archives_base_name=sec-network
 jdk_version=17
@@ -22,5 +22,5 @@ fabric_version=0.83.0+1.20
 lombok_version=1.18.26
 
 # sib-energy-craft libs
-sec_energy_api_version=0.0.6-1.20
-sec_utils_version=0.0.20-1.20
+sec_energy_api_version=0.0.9-1.20
+sec_utils_version=0.0.21-1.20
