Add publication into personal repository

--- a/build.gradle
+++ b/build.gradle
@@ -77,7 +77,46 @@ jar {
 
 // configure the maven publication
 publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            from(components.java)
+            pom {
+                packaging = "jar"
+                url = "https://github.com/sib-energy-craft/sec-network"
+
+                licenses {
+                    license {
+                        name = "The MIT License (MIT)"
+                        url = "https://www.mit.edu/~amini/LICENSE.md"
+                    }
+                }
+
+                scm {
+                    connection = "scm:https://github.com/sib-energy-craft/sec-network.git"
+                    developerConnection = "scm:git@github.com:sib-energy-craft/sec-network.git"
+                    url = "https://github.com/sib-energy-craft/sec-network"
+                }
+
+                developers {
+                    developer {
+                        id = "sibmaks"
+                        name = "Maksim Drobyshev"
+                        email = "sibmaks@vk.com"
+                    }
+                }
+            }
+        }
+    }
     repositories {
+        maven {
+            def releasesUrl = uri("https://sibmaks.ru/repository/maven-releases/")
+            def snapshotsUrl = uri("https://sibmaks.ru/repository/maven-snapshots/")
+            url = version.toString().endsWith("SNAPSHOT") ? snapshotsUrl : releasesUrl
+            credentials {
+                username = project.findProperty("nexus_username") ?: System.getenv("NEXUS_USERNAME")
+                password = project.findProperty("nexus_password") ?: System.getenv("NEXUS_PASSWORD")
+            }
+        }
         maven {
             name = "GitHubPackages"
             url = "https://maven.pkg.github.com/sib-energy-craft/sec-network"
@@ -85,11 +124,6 @@ publishing {
                 username = project.findProperty("gpr.user") ?: System.getenv("GITHUB_ACTOR")
                 password = project.findProperty("gpr.key") ?: System.getenv("GITHUB_TOKEN")
             }
-        }
-    }
-    publications {
-        gpr(MavenPublication) {
-            from(components.java)
         }
     }
 }
